unpackaged/main/default/objects/Case/fields/AA_Account_Already_At_Firm__c.field-meta.xml
<CustomField>
    <fullName>AA_Account_Already_At_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Source of Funds is an Advisory Account, is the account already at the firm?</inlineHelpText>
    <label>Advisory Account: Already at Firm?</label>
    <type>Checkbox</type>
</CustomField>