unpackaged/main/default/objects/Case/fields/AA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AA_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Source of Funds is an Advisory Account, and the account is already at the firm, provide the account number.</inlineHelpText>
    <label>Advisory Account: Account Number</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Cases (AA - Account Number)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>