unpackaged/main/default/objects/Case/fields/AA_Account_Number_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>AA_Account_Number_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Source of Funds is an Advisory Account, and the account is already at the firm, but the account was unable to be found.</inlineHelpText>
    <label>Advisory Account: Account Not Found</label>
    <type>Checkbox</type>
</CustomField>