unpackaged/main/default/objects/Case/fields/AA_Account_Number_Wizard__c.field-meta.xml
<CustomField>
    <fullName>AA_Account_Number_Wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AA - Account Number - Wizard</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Cases (AA - Account Number - Wizard)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>