unpackaged/main/default/objects/Case/fields/Account_Closure_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Account_Closure_Additional_Information__c</fullName>
    <label>Account Closure Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>