unpackaged/main/default/objects/Case/fields/Account_Closure_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Account_Closure_Explanation__c</fullName>
    <label>Account Closure Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>