unpackaged/main/default/objects/Case/fields/Account_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Closure_Reason__c</fullName>
    <label>Account Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Re-Registration</fullName>
            </value>
            <value>
                <fullName>Client Terminated Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>