unpackaged/main/default/objects/Case/fields/Account_Maintenance_or_Forms_Needed__c.field-meta.xml
<CustomField>
    <fullName>Account_Maintenance_or_Forms_Needed__c</fullName>
    <label>Account Maintenance or Forms Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>