unpackaged/main/default/objects/Case/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401K</fullName>
                <label>401(K)</label>
            </value>
            <value>
                <fullName>403B</fullName>
                <label>403(B)</label>
            </value>
            <value>
                <fullName>BUS</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>COMM</fullName>
                <label>Community Property</label>
            </value>
            <value>
                <fullName>CORP</fullName>
                <label>Corporation</label>
            </value>
            <value>
                <fullName>DBP</fullName>
                <label>Defined Benefit Plan</label>
            </value>
            <value>
                <fullName>DCP</fullName>
                <label>Defined Contribution Plan</label>
            </value>
            <value>
                <fullName>IND</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>IRA</fullName>
                <label>Individual Retirement Account</label>
            </value>
            <value>
                <fullName>JNT</fullName>
                <label>Joint</label>
            </value>
            <value>
                <fullName>KEO</fullName>
                <label>Keogh</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>Pension</label>
            </value>
            <value>
                <fullName>PSP</fullName>
                <label>Profit Sharing Plan</label>
            </value>
            <value>
                <fullName>SEP</fullName>
                <label>Simplified Employee Pension Plan</label>
            </value>
            <value>
                <fullName>TRU</fullName>
                <label>Trust</label>
            </value>
            <value>
                <fullName>UGMA</fullName>
                <label>Uniform Gift to Minors Account</label>
            </value>
            <value>
                <fullName>CUST</fullName>
                <label>Custodial</label>
            </value>
            <value>
                <fullName>PART</fullName>
                <label>Partnership</label>
            </value>
            <value>
                <fullName>UTMA</fullName>
                <label>Uniform Transfers to Minors Account</label>
            </value>
            <value>
                <fullName>TOD</fullName>
                <label>Transfer on Death</label>
            </value>
            <value>
                <fullName>EST</fullName>
                <label>Estate</label>
            </value>
            <value>
                <fullName>SIMP</fullName>
                <label>Simple</label>
            </value>
            <value>
                <fullName>NP</fullName>
                <label>Non-Profit</label>
            </value>
            <value>
                <fullName>SAR</fullName>
                <label>SAR Sep Plan</label>
            </value>
            <value>
                <fullName>INV</fullName>
                <label>Invalid Type</label>
            </value>
            <value>
                <fullName>DFP</fullName>
                <label>Defined Pension</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <label>Retirement Plan</label>
            </value>
            <value>
                <fullName>ROLL</fullName>
                <label>IRA Rollover</label>
            </value>
            <value>
                <fullName>PCRA</fullName>
                <label>Personal Choice Retirement Account</label>
            </value>
            <value>
                <fullName>EIRA</fullName>
                <label>Education IRA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>