unpackaged/main/default/objects/Case/fields/Add_to_Maestro_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Maestro_Report_Date__c</fullName>
    <label>Add to Maestro Report Date</label>
    <type>Date</type>
</CustomField>