unpackaged/main/default/objects/Case/fields/Add_to_Trade_Report__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Trade_Report__c</fullName>
    <label>Add to Trade Report</label>
    <type>Date</type>
</CustomField>