unpackaged/main/default/objects/Case/fields/Additional_Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Notes__c</fullName>
    <label>Additional Case Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>