unpackaged/main/default/objects/Case/fields/Advertising_Item__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertising Item</label>
    <referenceTo>Advertising_Item__c</referenceTo>
    <relationshipLabel>Case Advertising Items</relationshipLabel>
    <relationshipName>Case_Advertising_Item</relationshipName>
    <type>Lookup</type>
</CustomField>