unpackaged/main/default/objects/Case/fields/Advertising_Item_Intended_First_Use__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Item_Intended_First_Use__c</fullName>
    <formula>Advertising_Item__r.Date_of_Intended_First_Use__c</formula>
    <label>Advertising Item Intended First Use</label>
    <type>Date</type>
</CustomField>