unpackaged/main/default/objects/Case/fields/Advertisining_Request_FA_Team__c.field-meta.xml
<CustomField>
    <fullName>Advertisining_Request_FA_Team__c</fullName>
    <formula>Advertising_Item__r.Financial_Advisor_Team__r.Name</formula>
    <label>Advertisining Request FA Team</label>
    <type>Text</type>
</CustomField>