unpackaged/main/default/objects/Case/fields/Alts__c.field-meta.xml
<CustomField>
    <fullName>Alts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alts</label>
    <type>Checkbox</type>
</CustomField>