unpackaged/main/default/objects/Case/fields/AML_Approval__c.field-meta.xml
<CustomField>
    <fullName>AML_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML Approval</label>
    <type>Checkbox</type>
</CustomField>