unpackaged/main/default/objects/Case/fields/ASAA_as_a_of_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>ASAA_as_a_of_Net_Worth__c</fullName>
    <description>All Securitized Alt Investments (as a % of Net Worth)</description>
    <label>ASAA as a % of Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>