unpackaged/main/default/objects/Case/fields/BD_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>BD_Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BD_Brokerage</label>
    <type>Checkbox</type>
</CustomField>