unpackaged/main/default/objects/Case/fields/Beneficiary_Information__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Information__c</fullName>
    <label>Beneficiary Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>