unpackaged/main/default/objects/Case/fields/Breakpoint_Discount__c.field-meta.xml
<CustomField>
    <fullName>Breakpoint_Discount__c</fullName>
    <label>Breakpoint Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>