unpackaged/main/default/objects/Case/fields/Breakpoint_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Breakpoint_Discount_Percentage__c</fullName>
    <label>Breakpoint Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>