unpackaged/main/default/objects/Case/fields/Brokerage_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Rationale__c</fullName>
    <label>Brokerage - Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>