unpackaged/main/default/objects/Case/fields/Cancel_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Effective_Date__c</fullName>
    <label>Cancel Effective Date</label>
    <type>Date</type>
</CustomField>