unpackaged/main/default/objects/Case/fields/Case_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Branch_Name__c</fullName>
    <label>Case Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>