unpackaged/main/default/objects/Case/fields/Case_Branch_Name_DisplayName__c.field-meta.xml
<CustomField>
    <fullName>Case_Branch_Name_DisplayName__c</fullName>
    <formula>SUBSTITUTE(Case_Branch_Name__c, &quot; | &lt;/br&gt;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case</label>
    <type>Text</type>
</CustomField>