unpackaged/main/default/objects/Case/fields/Case_Cancelation_Explantation__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelation_Explantation__c</fullName>
    <label>Case Cancelation Explantation</label>
    <type>TextArea</type>
</CustomField>