unpackaged/main/default/objects/Case/fields/Case_Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelation_Reason__c</fullName>
    <label>Case Cancelation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Accidentally Entered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>