unpackaged/main/default/objects/Case/fields/Case_Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>