unpackaged/main/default/objects/Case/fields/Case_Home_Office_Name_DisplayName__c.field-meta.xml
<CustomField>
    <fullName>Case_Home_Office_Name_DisplayName__c</fullName>
    <formula>SUBSTITUTE(Case_Home_Office_Name__c, &quot; | &lt;/br&gt;&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Home Office Name</label>
    <type>Text</type>
</CustomField>