unpackaged/main/default/objects/Case/fields/Case_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Template</label>
    <referenceTo>Case_Template__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>