unpackaged/main/default/objects/Case/fields/Cash_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Withdrawal_Amount__c</fullName>
    <label>Cash Withdrawal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>