unpackaged/main/default/objects/Case/fields/Cash_Withdrawal_Selection__c.field-meta.xml
<CustomField>
    <fullName>Cash_Withdrawal_Selection__c</fullName>
    <label>Cash Withdrawal Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Coupon Only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>