unpackaged/main/default/objects/Case/fields/Change_Withholdings__c.field-meta.xml
<CustomField>
    <fullName>Change_Withholdings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Withholdings?</label>
    <type>Checkbox</type>
</CustomField>