unpackaged/main/default/objects/Case/fields/Charity_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Charity_Contact_Information__c</fullName>
    <label>Charity Contact Information</label>
    <type>TextArea</type>
</CustomField>