unpackaged/main/default/objects/Case/fields/Check_in_Hand__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check in Hand</label>
    <type>Checkbox</type>
</CustomField>