unpackaged/main/default/objects/Case/fields/Client_Needs_Driving_Rollover__c.field-meta.xml
<CustomField>
    <fullName>Client_Needs_Driving_Rollover__c</fullName>
    <inlineHelpText>Select all that apply.</inlineHelpText>
    <label>Client Needs Driving Rollover?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not want assets in former employers plan</fullName>
            </value>
            <value>
                <fullName>Performance of Investment Options</fullName>
            </value>
            <value>
                <fullName>Desires lifetime income</fullName>
            </value>
            <value>
                <fullName>Desires more direct control over assets</fullName>
            </value>
            <value>
                <fullName>Desires professional advice/management</fullName>
            </value>
            <value>
                <fullName>Lack of Planning Service</fullName>
            </value>
            <value>
                <fullName>Lack of Investment Options</fullName>
            </value>
            <value>
                <fullName>Consolidation of Assets</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>