unpackaged/main/default/objects/Case/fields/Client_Needs_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Needs_Other_Description__c</fullName>
    <label>Client Needs Other Description</label>
    <type>TextArea</type>
</CustomField>