unpackaged/main/default/objects/Case/fields/Close_Account__c.field-meta.xml
<CustomField>
    <fullName>Close_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Account</label>
    <type>Checkbox</type>
</CustomField>