unpackaged/main/default/objects/Case/fields/Completed_Main_Track_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_Main_Track_Tasks__c</fullName>
    <label>Completed Main Track Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>