unpackaged/main/default/objects/Case/fields/Continuations_Features_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Continuations_Features_Discussed__c</fullName>
    <label>Continuations Features Discussed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>