unpackaged/main/default/objects/Case/fields/Created_Date_for_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_for_Maestro__c</fullName>
    <formula>IF(
WEEKDAY( DATEVALUE(CreatedDate)  ) = 6,
DATEVALUE(CreatedDate) + 2,
IF(
WEEKDAY(DATEVALUE(CreatedDate)) = 7,
DATEVALUE(CreatedDate) + 1,
DATEVALUE(CreatedDate)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date for Maestro</label>
    <type>Date</type>
</CustomField>