unpackaged/main/default/objects/Case/fields/CreatedByLicense__c.field-meta.xml
<CustomField>
    <fullName>CreatedByLicense__c</fullName>
    <formula>CreatedBy.Profile.Name = &#39;Wizard Only&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByLicense</label>
    <type>Checkbox</type>
</CustomField>