unpackaged/main/default/objects/Case/fields/Current_Task__c.field-meta.xml
<CustomField>
    <fullName>Current_Task__c</fullName>
    <label>Current Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>