unpackaged/main/default/objects/Case/fields/Current_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Task_Id__c</fullName>
    <label>Current Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>