unpackaged/main/default/objects/Case/fields/Current_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Task_Status__c</fullName>
    <label>Case Overall Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>