unpackaged/main/default/objects/Case/fields/Current_Task_Subject_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Current_Task_Subject_Assignee__c</fullName>
    <label>Assignee | Current Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>