unpackaged/main/default/objects/Case/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <length>225</length>
    <type>Text</type>
</CustomField>