unpackaged/main/default/objects/Case/fields/Custodian_Transferring_From__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Transferring_From__c</fullName>
    <label>Custodian Transferring From</label>
    <length>60</length>
    <type>Text</type>
</CustomField>