unpackaged/main/default/objects/Case/fields/Date_Task_Script_Last_Ran__c.field-meta.xml
<CustomField>
    <fullName>Date_Task_Script_Last_Ran__c</fullName>
    <label>Date Task Script Last Ran</label>
    <type>Date</type>
</CustomField>