unpackaged/main/default/objects/Case/fields/Date_Trade_Should_Have_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Trade_Should_Have_Occurred__c</fullName>
    <label>Date Trade Should Have Occurred</label>
    <type>Date</type>
</CustomField>