unpackaged/main/default/objects/Case/fields/Dividends__c.field-meta.xml
<CustomField>
    <fullName>Dividends__c</fullName>
    <label>Dividends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reinvested</fullName>
            </value>
            <value>
                <fullName>Sent to Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>