unpackaged/main/default/objects/Case/fields/DMS_Addendum_Freq_Other__c.field-meta.xml
<CustomField>
    <fullName>DMS_Addendum_Freq_Other__c</fullName>
    <label>DMS Addendum Freq Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>