unpackaged/main/default/objects/Case/fields/DMS_Addendum_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DMS_Addendum_Frequency__c</fullName>
    <label>DMS Addendum Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>