unpackaged/main/default/objects/Case/fields/DMS_Frequency_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DMS_Frequency_Start_Date__c</fullName>
    <label>DMS Frequency Start Date</label>
    <type>Date</type>
</CustomField>