unpackaged/main/default/objects/Case/fields/Documents_Ready__c.field-meta.xml
<CustomField>
    <fullName>Documents_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Ready</label>
    <type>Checkbox</type>
</CustomField>