unpackaged/main/default/objects/Case/fields/Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Documents_Uploaded__c</fullName>
    <label>Documents Uploaded</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>