unpackaged/main/default/objects/Case/fields/DoNotCalc__c.field-meta.xml
<CustomField>
    <fullName>DoNotCalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotCalc</label>
    <type>Checkbox</type>
</CustomField>