unpackaged/main/default/objects/Case/fields/Due_Date_of_Current_Task__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_of_Current_Task__c</fullName>
    <label>Due Date of Current Task</label>
    <type>Date</type>
</CustomField>