unpackaged/main/default/objects/Case/fields/Employee_Deferral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employee_Deferral_Amount__c</fullName>
    <label>Employee Deferral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>