unpackaged/main/default/objects/Case/fields/Enough_Cash__c.field-meta.xml
<CustomField>
    <fullName>Enough_Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enough Cash</label>
    <type>Checkbox</type>
</CustomField>