unpackaged/main/default/objects/Case/fields/EP_Total_as_of_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>EP_Total_as_of_Net_Worth__c</fullName>
    <description>Energy Programs Total Amount in Asset Class as a % of Net Worth.</description>
    <label>EP Total as % of Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>