unpackaged/main/default/objects/Case/fields/EP_Total_including_Today__c.field-meta.xml
<CustomField>
    <fullName>EP_Total_including_Today__c</fullName>
    <description>Energy Programs Total $ Amount in Asset Class (including today&#39;s purchase)</description>
    <label>EP Total $ including Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>