unpackaged/main/default/objects/Case/fields/Federal_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Federal_Withholding__c</fullName>
    <label>Federal % Withholding</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>