unpackaged/main/default/objects/Case/fields/Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule__c</fullName>
    <label>Fee Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>