unpackaged/main/default/objects/Case/fields/Find_FARP__c.field-meta.xml
<CustomField>
    <fullName>Find_FARP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Find FARP</label>
    <type>Checkbox</type>
</CustomField>