unpackaged/main/default/objects/Case/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Cases (From Account)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>