unpackaged/main/default/objects/Case/fields/From_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Cases (From Financial Account)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>