unpackaged/main/default/objects/Case/fields/Funding_Includes_Insurance_Product__c.field-meta.xml
<CustomField>
    <fullName>Funding_Includes_Insurance_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding Includes Insurance Product?</label>
    <type>Checkbox</type>
</CustomField>