unpackaged/main/default/objects/Case/fields/Gift_Account_Already_at_Firm__c.field-meta.xml
<CustomField>
    <fullName>Gift_Account_Already_at_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Source of Funds is Gift/Inheritance, is the account already at the firm?</inlineHelpText>
    <label>Gift: Account Already at Firm?</label>
    <type>Checkbox</type>
</CustomField>