unpackaged/main/default/objects/Case/fields/Gift_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift - Account Number</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Cases (Gift - Account Number)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>